fix z-index

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -189,6 +189,8 @@ body
       pointer-events: auto
 
 // TRANSITION-CUBE
+.active
+  z-index: 9999
 .next
   display: none
 
